--- a/indexFinal.css
+++ b/indexFinal.css
@@ -1,3 +1,22 @@
 h1{
     color: red
 }
+a:link {
+    color: rgb(251, 246, 0); 
+  background-color: transparent; 
+  text-decoration: none;        }
+
+a:visited {          
+    color: rgb(251, 246, 0);
+    background-color: transparent;
+    text-decoration: none;    }
+    
+a:hover {
+  color: rgb(251, 246, 0);
+  background-color: transparent;
+  text-decoration: underline;  }
+    
+a:active {
+  color: yellow;
+  background-color: transparent;
+  text-decoration: underline; }
